--- a/.github/workflows/main_mac.yml
+++ b/.github/workflows/main_mac.yml
@@ -5,20 +5,20 @@ on:
 
 jobs:
   secure-vnc:
-    # Menggunakan macos-14 (Sonoma) yang lebih stabil.
-    # Jika Anda benar-benar butuh macos-15 (Sequoia), ganti ini ke macos-15
-    runs-on: macos-14 
+    # Tetap gunakan macos-14 untuk stabilitas VNC
+    runs-on: macos-14
     timeout-minutes: 360
 
     steps:
+      # Langkah 1: Siapkan VNC dan Password
+      # (Ini sudah berfungsi di log terakhir Anda)
       - name: Generate Password and Enable VNC
         run: |
           VNC_PASS=$(openssl rand -base64 12)
           echo "VNC_PASSWORD=$VNC_PASS" >> $GITHUB_ENV
-          
           echo "Password VNC (akan muncul di log): $VNC_PASS"
           
-          # Aktifkan dan konfigurasikan Apple Remote Desktop (VNC)
+          # Perintah kickstart VNC dengan sintaks -users yang sudah benar
           sudo /System/Library/CoreServices/RemoteManagement/ARDAgent.app/Contents/Resources/kickstart \
             -activate \
             -configure \
@@ -26,65 +26,59 @@ jobs:
             -clientopts -setvnclegacy -vnclegacy yes \
             -clientopts -setvncpw -vncpw "$VNC_PASS" \
             -restart -agent \
-            -privs -all -users runner  # <-- PERBAIKAN: Menggunakan -users (plural)
+            -privs -all -users runner
 
-      - name: Install Tailscale
-        run: |
-          curl -o $RUNNER_TEMP/tailscale.pkg https://pkgs.tailscale.com/stable/Tailscale.pkg
-          sudo installer -pkg $RUNNER_TEMP/tailscale.pkg -target /
-          rm $RUNNER_TEMP/tailscale.pkg
-
-      - name: Establish Tailscale Connection
-        run: |
-          # Atur Tailscale agar berjalan dalam mode 'unattended' (penting untuk CI)
-          sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale set --unattended
-
-          # PERBAIKAN: Gunakan 'nohup' dan '&' untuk menjalankan di background
-          # Ini mencegah runner membunuh proses (Killed: 9 / Error 137)
-          echo "Menjalankan Tailscale up di background..."
-          nohup sudo /Applications/Tailscale.app/Contents/MacOS/Tailscale up \
-            --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
-            --hostname=gh-runner-macos-$GITHUB_RUN_ID &
+      # Langkah 2: Gunakan Action Resmi Tailscale
+      # Ini adalah PERUBAHAN UTAMA untuk menghindari error 'Killed: 9'
+      - name: Install and Connect Tailscale
+        uses: tailscale/github-action@v2
+        with:
+          # Gunakan secret Anda
+          authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
+          # Buat hostname yang unik
+          hostname: gh-runner-macos-${{ github.run_id }}
           
-          # Beri waktu 10 detik agar Tailscale daemon stabil sebelum polling IP
-          echo "Menunggu 10 detik agar Tailscale terhubung..."
-          sleep 10
-          
-          # Tunggu Tailscale mendapatkan IP
+      # Langkah 3: Dapatkan IP Tailscale
+      # Kita perlu langkah ini karena action di atas tidak otomatis 
+      # menyimpan IP ke GITHUB_ENV
+      - name: Get Tailscale IP
+        run: |
           tsIP=""
           retries=0
+          # Beri waktu 5 detik agar IP ter-assign
+          echo "Menunggu Tailscale mendaftarkan IP..."
+          sleep 5 
+          
           while [ -z "$tsIP" ] && [ $retries -lt 10 ]; do
             echo "Mencari IP Tailscale... (Percobaan $((retries+1)))"
-            # Kita tidak perlu sudo untuk 'ip'
+            # Path-nya sama, kita hanya perlu query IP
             tsIP=$(/Applications/Tailscale.app/Contents/MacOS/Tailscale ip -4)
-            sleep 5
+            sleep 3
             retries=$((retries + 1))
           done
-          
+
           if [ -z "$tsIP" ]; then
-            echo "::error::Gagal mendapatkan IP Tailscale. Keluar."
-            # Tampilkan status Tailscale untuk debugging
+            echo "::error::Gagal mendapatkan IP Tailscale setelah action."
             /Applications/Tailscale.app/Contents/MacOS/Tailscale status
             exit 1
           fi
           
           echo "TAILSCALE_IP=$tsIP" >> $GITHUB_ENV
-          echo "IP Tailscale didapat: $tsIP"
+          echo "IP Tailscale berhasil didapat: $tsIP"
 
+      # Langkah 4: Verifikasi Port VNC (Opsional tapi bagus)
       - name: Verify VNC Accessibility
         run: |
           echo "Tailscale IP: $TAILSCALE_IP"
-          
-          # Tes konektivitas ke port VNC (5900)
           echo "Menguji port VNC 5900 pada $TAILSCALE_IP..."
           
-          # Tambahkan 'nc' (netcat) untuk mengetes port
           if ! nc -z -v $TAILSCALE_IP 5900; then
             echo "::warning::Koneksi TCP ke port VNC 5900 gagal"
           else
             echo "Konektivitas TCP (VNC) berhasil!"
           fi
 
+      # Langkah 5: Jaga Koneksi (Final)
       - name: Maintain Connection
         run: |
           echo ""
@@ -97,10 +91,9 @@ jobs:
           echo "===================="
           echo ""
           
-          # Jaga agar runner tetap aktif
           while true; do
             echo "[$(date)] VNC Aktif - Gunakan 'Cancel workflow' untuk menghentikan"
-            # Tampilkan status Tailscale setiap 5 menit
+            # Tampilkan status Tailscale untuk debugging
             /Applications/Tailscale.app/Contents/MacOS/Tailscale status
             sleep 300
           done
