--- a/.github/workflows/main_mac.yml
+++ b/.github/workflows/main_mac.yml
@@ -9,7 +9,7 @@ jobs:
     timeout-minutes: 360
 
     steps:
-      # Langkah 1: Siapkan VNC dan Password (Tidak berubah)
+      # Langkah 1: Siapkan VNC dan Password (Sudah OK)
       - name: Generate Password and Enable VNC
         run: |
           VNC_PASS=$(openssl rand -base64 12)
@@ -25,29 +25,38 @@ jobs:
             -restart -agent \
             -privs -all -users runner
 
-      # Langkah 2: PERUBAHAN - Install Tailscale via Homebrew
+      # Langkah 2: Install Tailscale via Homebrew (Sudah OK)
       - name: Install Tailscale via Homebrew
         run: brew install tailscale
 
-      # Langkah 3: PERUBAHAN - Hubungkan Tailscale (Manual)
+      # Langkah 3: PERUBAHAN BESAR - Start Daemon dan Hubungkan
       - name: Establish Tailscale Connection
         run: |
-          # Dapatkan path tailscale dari Homebrew (biasanya /opt/homebrew/bin/tailscale)
+          # Dapatkan path tailscale dari Homebrew
           TS_BIN=$(which tailscale)
           echo "Tailscale binary found at: $TS_BIN"
           
-          # Gunakan 'nohup' dan '&' untuk menjalankan di background
-          # Ini untuk menghindari error 'Killed: 9 / Error 137'
-          echo "Menjalankan Tailscale up di background..."
-          nohup sudo $TS_BIN up \
+          # 1. Start daemon/service menggunakan 'brew services'
+          # Inilah yang hilang sebelumnya.
+          echo "Starting Tailscale daemon via brew services..."
+          sudo brew services start tailscale
+          
+          # 2. Beri waktu 5 detik agar daemon-nya siap
+          echo "Waiting 5 seconds for daemon to initialize..."
+          sleep 5
+          
+          # 3. Sekarang jalankan 'up' (ini adalah klien)
+          # Tidak perlu 'nohup' atau '&' karena daemon sudah berjalan
+          echo "Connecting to Tailscale..."
+          sudo $TS_BIN up \
             --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
-            --hostname=gh-runner-macos-$GITHUB_RUN_ID &
+            --hostname=gh-runner-macos-$GITHUB_RUN_ID
           
-          # Beri waktu 10 detik agar Tailscale daemon stabil
-          echo "Menunggu 10 detik agar Tailscale terhubung..."
-          sleep 10
+          # 4. Beri waktu untuk terhubung sebelum polling IP
+          echo "Waiting 5 seconds for connection to establish..."
+          sleep 5
           
-          # Tunggu Tailscale mendapatkan IP
+          # 5. Polling IP (seperti sebelumnya)
           tsIP=""
           retries=0
           while [ -z "$tsIP" ] && [ $retries -lt 10 ]; do
@@ -59,7 +68,7 @@ jobs:
           
           if [ -z "$tsIP" ]; then
             echo "::error::Gagal mendapatkan IP Tailscale. Keluar."
-            $TS_BIN status
+            sudo $TS_BIN status
             exit 1
           fi
           
@@ -78,12 +87,10 @@ jobs:
             echo "Konektivitas TCP (VNC) berhasil!"
           fi
 
-      # Langkah 5: Jaga Koneksi (Final)
+      # Langkah 5: Jaga Koneksi (Final - Tidak berubah)
       - name: Maintain Connection
         run: |
-          # Dapatkan path tailscale lagi
           TS_BIN=$(which tailscale)
-        
           echo ""
           echo "=== VNC ACCESS ==="
           echo "http://www.youtube.com/@TipsUNIX"
@@ -96,7 +103,6 @@ jobs:
           
           while true; do
             echo "[$(date)] VNC Aktif - Gunakan 'Cancel workflow' untuk menghentikan"
-            # Tampilkan status Tailscale untuk debugging
-            $TS_BIN status
+            sudo $TS_BIN status
             sleep 300
           done
