--- a/.github/workflows/main_mac.yml
+++ b/.github/workflows/main_mac.yml
@@ -5,11 +5,13 @@ on:
 
 jobs:
   secure-vnc:
-    runs-on: macos-14
+    # PERUBAHAN UTAMA: Gunakan macos-13 (Ventura)
+    # Ini untuk menghindari masalah izin "Screen Recording" di macos-14
+    runs-on: macos-13
     timeout-minutes: 360
 
     steps:
-      # Langkah 1: Siapkan VNC dan Password (Sudah OK)
+      # Langkah 1: Siapkan VNC dan Password
       - name: Generate Password and Enable VNC
         run: |
           VNC_PASS=$(openssl rand -base64 12)
@@ -25,38 +27,30 @@ jobs:
             -restart -agent \
             -privs -all -users runner
 
-      # Langkah 2: Install Tailscale via Homebrew (Sudah OK)
+      # Langkah 2: Install Tailscale via Homebrew
       - name: Install Tailscale via Homebrew
         run: brew install tailscale
 
-      # Langkah 3: PERUBAHAN BESAR - Start Daemon dan Hubungkan
+      # Langkah 3: Start Daemon dan Hubungkan
       - name: Establish Tailscale Connection
         run: |
-          # Dapatkan path tailscale dari Homebrew
           TS_BIN=$(which tailscale)
           echo "Tailscale binary found at: $TS_BIN"
           
-          # 1. Start daemon/service menggunakan 'brew services'
-          # Inilah yang hilang sebelumnya.
           echo "Starting Tailscale daemon via brew services..."
           sudo brew services start tailscale
           
-          # 2. Beri waktu 5 detik agar daemon-nya siap
           echo "Waiting 5 seconds for daemon to initialize..."
           sleep 5
           
-          # 3. Sekarang jalankan 'up' (ini adalah klien)
-          # Tidak perlu 'nohup' atau '&' karena daemon sudah berjalan
           echo "Connecting to Tailscale..."
           sudo $TS_BIN up \
             --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} \
             --hostname=gh-runner-macos-$GITHUB_RUN_ID
           
-          # 4. Beri waktu untuk terhubung sebelum polling IP
           echo "Waiting 5 seconds for connection to establish..."
           sleep 5
           
-          # 5. Polling IP (seperti sebelumnya)
           tsIP=""
           retries=0
           while [ -z "$tsIP" ] && [ $retries -lt 10 ]; do
@@ -75,7 +69,7 @@ jobs:
           echo "TAILSCALE_IP=$tsIP" >> $GITHUB_ENV
           echo "IP Tailscale berhasil didapat: $tsIP"
 
-      # Langkah 4: Verifikasi Port VNC (Tidak berubah)
+      # Langkah 4: Verifikasi Port VNC
       - name: Verify VNC Accessibility
         run: |
           echo "Tailscale IP: $TAILSCALE_IP"
@@ -87,7 +81,7 @@ jobs:
             echo "Konektivitas TCP (VNC) berhasil!"
           fi
 
-      # Langkah 5: Jaga Koneksi (Final - Tidak berubah)
+      # Langkah 5: Jaga Koneksi
       - name: Maintain Connection
         run: |
           TS_BIN=$(which tailscale)
